--- a/index.html
+++ b/index.html
@@ -27,50 +27,53 @@
     <!-- contenido-->
 
     <main>
-        <br>
+        <h2>Historia</h2>
         <section id="historia">
-            <h2>Historia</h2>
-            <p>El Club Atlético Baradero es una entidad deportiva argentina con sede la ciudad de Baradero, provincia de
+
+            <p class="historia-del-club">El Club Atlético Baradero es una entidad deportiva argentina con sede la ciudad
+                de Baradero, provincia de
                 Buenos
-                Aires. Fue fundado el 3 de abril de 1905 con la finalidad de practicar fútbol</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet molestias reiciendis fugit sequi dolores
+                Aires. Fue fundado el 3 de abril de 1905 con la finalidad de practicar fútbol
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet molestias reiciendis fugit sequi dolores
                 debitis maiores, odio nam animi? Repellat error ratione illo accusamus et distinctio facere asperiores
-                praesentium eum.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                praesentium eum.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <img src="img/placa.JPG" alt="imagen-de-una-placa-con-el-escudo-del-club-atletico-baradero">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit
+                explicabo deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione
+                iste saepe ex
+            </p>
+            <img class="sede-del-club" src="img/sede-del-club.jpg" alt="imagen de la sede del club atletico baradero">
+            <p class="historia-del-club-segunda-parte">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
+                vitae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
                 vitae.</p>
         </section>
 
-
-        <br>
         <section id="ubicacion">
             <h3>¿donde encontrarnos?</h3>
             <iframe
@@ -89,20 +92,15 @@
     </main>
 
     <!--pie de pagina-->
-    <br>
     <footer>
-        <section id="redes">
+        <section id="footer">
             <h4>
-                seguinos en
+                Seguinos en
             </h4>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/clubatleticobaradero/">instagram</a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a>
-                </li>
-            </ul>
+            <button><a class="boton-de-instagram"
+                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
+            <button><a class="boton-de-facebook"
+                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
         </section>
     </footer>
 
