--- a/pages/basquet.html
+++ b/pages/basquet.html
@@ -10,103 +10,105 @@
 
 <body>
 
-<header class="header" >
+    <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
         <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
-            <button><a class="boton-inicio"  href="/index.html">inicio</a></button>
+            <button><a class="boton-inicio" href="/index.html">inicio</a></button>
             <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
             <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
             <button><a class="boton-voley" href="voley.html">voley</a></button>
             <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
         </nav>
-</header>
+    </header>
 
     <main>
 
+        <section id="menu-basquet">
+            <h1>Basquet - Club Atletico Baradero</h1>
+            <img class="logo-basquet" src="/img/logo-basquet.jpg" alt="logo del basquet del club atletico baradero">
+            <nav>
+                <button><a href="#basquet-masculino">basquet masculino</a></button>
+                <button><a href="#basquet-femenino">basquet femenino</a></button>
+                <button><a href="#basquet-infantil">basquet infantil</a></button>
+            </nav>
+        </section>
 
-        <h1>club atletico baradero</h1>
-    
-        <nav>
-            <ul>
-                <li>
-                    <a href="#basquet-masculino">basquet masculino</a>
-                </li>
-                <li>
-                    <a href="#basquet-femenino">basquet femenino</a>
-                </li>
-                <li>
-                    <a href="#basquet-infantil">basquet infantil</a>
-                </li>
-            </ul>
-        </nav>
-
-        <section id="basquet-masculino"></section>
         <h2>basquet Masculino</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-
-
-        <section id="basquet-femenino"></section>
+        <section id="basquet-masculino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
         <h3>basquet femenino</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <section id="basquet-femenino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
-
-
-        <section id="basquet-infantil"></section>
         <h4>basquet infantil</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-
+        <section id="basquet-infantil">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
     </main>
 
 
 
-    <br><footer>
-        <a href="/index.html">inicio</a>
-        <section id="redes">
+
+    <footer>
+        <section id="footer">
             <h4>
-                seguinos en
+                Seguinos en
             </h4>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/clubatleticobaradero/">instagram</a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a>
-                </li>
-            </ul>
+            <button><a class="boton-de-instagram"
+                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
+            <button><a class="boton-de-facebook"
+                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
         </section>
     </footer>
 </body>
