--- a/pages/futbol.html
+++ b/pages/futbol.html
@@ -11,101 +11,106 @@
 
 <body>
 
-    <header class="header" >
-            <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-            <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
-            <nav class="botones">
-                <button><a class="boton-inicio" href="/index.html">inicio</a></button>
-                <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
-                <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
-                <button><a class="boton-voley" href="voley.html">voley</a></button>
-                <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
-            </nav>
+    <header class="header">
+        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
+        <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <nav class="botones">
+            <button><a class="boton-inicio" href="/index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
+        </nav>
     </header>
 
 
 
     <main>
-        
-        <h1>club atletico baradero</h1>
-        <img src="/img/cancha-de-futbol.JPG" alt="imagen del estadio carlos asali">
-        <nav>
-            <ul>
-                <li>
-                    <a href="#futbol-masculino">futbol masculino</a>
-                </li>
-                <li>
-                    <a href="#futbol-femenino">futbol femenino</a>
-                </li>
-                <li>
-                    <a href="#futbol-infantil">futbol infantil</a>
-                </li>
-            </ul>
-        </nav>
+        <section id="menu-futbol">
+            <h1>Futbol - Club Atletico Baradero</h1>
+            <img class="cancha-de-futbol" src="/img/cancha-de-futbol.JPG" alt="imagen del estadio carlos asali">
+            <nav>
+                <button><a href="#futbol-masculino">futbol masculino</a></button>
+                <button><a href="#futbol-femenino">futbol femenino</a></button>
+                <button><a href="#futbol-infantil">futbol infantil</a></button>
+            </nav>
+        </section>
 
-        <section id="futbol-masculino"></section>
-        <h2>futbol masculino</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <h2>Futbol Masculino</h2>
+        <section id="futbol-masculino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
+        <h3>Futbol Femenino</h3>
+        <section id="futbol-femenino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
-        <section id="futbol-femenino"></section>
-        <h3>futbol femenino</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <h4>Futbol Infantil</h4>
+        <section id="futbol-infantil">
 
-
-        <section id="futbol-infantil"></section>
-        <h4>futbol infantil</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
     </main>
 
-    <br><footer>
-        <a href="/index.html">inicio</a>
-        <section id="redes">
+    
+    <footer>
+        <section id="footer">
             <h4>
-                seguinos en
+                Seguinos en
             </h4>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/clubatleticobaradero/">instagram</a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a>
-                </li>
-            </ul>
+            <button><a class="boton-de-instagram"
+                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
+            <button><a class="boton-de-facebook"
+                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
         </section>
     </footer>
 
