--- a/pages/patinaje.html
+++ b/pages/patinaje.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
 </head>
 
 <body>
-    <header class="header" >
+    <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
         <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
@@ -18,93 +19,98 @@
             <button><a class="boton-voley" href="voley.html">voley</a></button>
             <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
         </nav>
-</header>
+    </header>
 
 
 
     <main>
-        <h1>club atletico baradero</h1>
-    
-        <nav>
-            <ul>
-                <li>
-                    <a href="#patinaje-masculino">patinaje masculino</a>
-                </li>
-                <li>
-                    <a href="#patinaje-femenino">patinaje femenino</a>
-                </li>
-                <li>
-                    <a href="#patinaje-infantil">patinaje infantil</a>
-                </li>
-            </ul>
-        </nav>
 
-        <section id="patinaje-masculino"></section>
-        <h2>patinaje Masculino</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <section id="menu-patinaje">
+            <h1>Patinaje - Club Atletico Baradero</h1>
+            <img class="logo-patinaje" src="/img/logo-patinaje.jpg" alt="logo de patinaje del cluhb atletico baradero">
+            <nav>
+                <button><a href="#patinaje-masculino">patinaje masculino</a></button>
+                <button><a href="#patinaje-femenino">patinaje femenino</a></button>
+                <button><a href="#patinaje-infantil">patinaje infantil</a></button>
+            </nav>
+        </section>
 
+        <h2>Patinaje Masculino</h2>
+        <section id="patinaje-masculino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
-        <section id="patinaje-femenino"></section>
-        <h3>patinaje femenino</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <h3>Patinaje Femenino</h3>
+        <section id="patinaje-femenino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
-
-
-        <section id="patinaje-infantil"></section>
-        <h4>patinaje infantil</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-
+        <h4>Patinaje Infantil</h4>
+        <section id="patinaje-infantil">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
     </main>
 
 
-    <br><footer>
-        <a href="/index.html">inicio</a>
-        <section id="redes">
+    <footer>
+        <section id="footer">
             <h4>
-                seguinos en
+                Seguinos en
             </h4>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/clubatleticobaradero/">instagram</a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a>
-                </li>
-            </ul>
+            <button><a class="boton-de-instagram"
+                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
+            <button><a class="boton-de-facebook"
+                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
         </section>
-    </footer> 
+    </footer>
 </body>
+
 </html>
