--- a/pages/voley.html
+++ b/pages/voley.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header class="header" >
+    <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
         <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
@@ -20,90 +20,93 @@
             <button><a class="boton-voley" href="voley.html">voley</a></button>
             <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
         </nav>
-</header>
+    </header>
 
-   <main>
-        <h1>club atletico baradero</h1>
-    
-        <nav>
-            <ul>
-                <li>
-                    <a href="#voley-masculino">voley masculino</a>
-                </li>
-                <li>
-                    <a href="#voley-femenino">voley femenino</a>
-                </li>
-                <li>
-                    <a href="#voley-infantil">voley infantil</a>
-                </li>
-            </ul>
-        </nav>
+    <main>
 
-        <section id="voley-masculino"></section>
-        <h2>voley Masculino</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <section id="menu-voley">
+            <h1>Voley - Club Atletico Baradero</h1>
+            <img class="logo-voley" src="/img/logo-voley.jpg" alt="logo de voley del club atletico baradero">
+            <nav>
+                <button><a href="#voley-masculino">voley masculino</a></button>
+                <button><a href="#voley-femenino">voley femenino</a></button>
+                <button><a href="#voley-infantil">voley infantil</a></button>
+            </nav>
+        </section>
 
+        <h2>Voley Masculino</h2>
+        <section id="voley-masculino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
-        <section id="voley-femenino"></section>
-        <h3>voley femenino</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        <h3>Voley Femenino</h3>
+        <section id="voley-femenino">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
 
-
-
-        <section id="voley-infantil"></section>
-        <h4>voley infantil</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
-            fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
-
+        <h4>Voley Infantil</h4>
+        <section id="voley-infantil">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id non sed expedita quibusdam iusto velit
+                ullam
+                fugit officiis harum cumque quas magnam quis debitis, at odio, ex eligendi. Officiis, vitae.</p>
+        </section>
     </main>
 
-
-    <br><footer>
-        <a href="/index.html">inicio</a>
-        <section id="redes">
+    <footer>
+        <section id="footer">
             <h4>
-                seguinos en
+                Seguinos en
             </h4>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/clubatleticobaradero/">instagram</a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a>
-                </li>
-            </ul>
+            <button><a class="boton-de-instagram"
+                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
+            <button><a class="boton-de-facebook"
+                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
         </section>
     </footer>
 </body>
